icon customization and copyright

--- a/templates/adb-gui.html
+++ b/templates/adb-gui.html
@@ -1803,5 +1803,8 @@
             stopDeviceAutoRefresh();
         });
     </script>
+    <div class="dashboard-footer text-center mt-4 mb-3 w-100">
+        <a class="credit d-inline-block" href="https://secrash.com" target="_blank"><span>2025 © Secrash</span></a>
+      </div>
 {% endblock %}
 
