--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.path.startswith('/features') %}active{% endif %}" href="{{ url_for('features') }}">
-                            <i class="bi bi-grid"></i> Features
+                            <i class="bi bi-layer-forward"></i> APK/IPA Dump
                         </a>
                     </li>
                     <li class="nav-item">
@@ -67,7 +67,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.path.startswith('/adb-gui') %}active{% endif %}" href="{{ url_for('adb_gui_page') }}">
-                            <i class="bi bi-globe2"></i> ADB GUI
+                            <i class="bi bi-gear-wide-connected"></i> ADB GUI
                         </a>
                     </li>
                     <li class="nav-item dropdown">
