--- a/templates/no-usb.html
+++ b/templates/no-usb.html
@@ -104,9 +104,9 @@
             </div>
         </div>
         
-        <div class="dashboard-footer">
-            <a class="credit" href="https://secrash.com" target="_blank"><span>2025 © Secrash</span></a>
-        </div>
+        <div class="dashboard-footer text-center mt-4 mb-3 w-100">
+            <a class="credit d-inline-block" href="https://secrash.com" target="_blank"><span>2025 © Secrash</span></a>
+          </div>
     </div>
     
     <script>
