--- a/templates/sslpindetect.html
+++ b/templates/sslpindetect.html
@@ -163,8 +163,8 @@
     </div>
   </div>
 
-  <div class="footer">
-    <a class="credit" href="https://secrash.com" target="_blank"><span>2025 © Secrash</span></a>
+  <div class="dashboard-footer text-center mt-4 mb-3 w-100">
+    <a class="credit d-inline-block" href="https://secrash.com" target="_blank"><span>2025 © Secrash</span></a>
   </div>
 </div>
 
