--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% if request.path.startswith('/adb-gui') %}active{% endif %}" href="{{ url_for('adb_gui_page') }}">
-                            <i class="bi bi-gear-wide-connected"></i> ADB GUI
+                            <i class="bi bi-gear-wide-connecteds"></i> ADB GUI
                         </a>
                     </li>
                     <li class="nav-item dropdown">
