feat: add apk downloader page

--- a/templates/no-usb.html
+++ b/templates/no-usb.html
@@ -76,7 +76,7 @@
                 <p class="card-description">Analyze APK & IPA files and extract information</p>
                 </div>
                 
-                <div class="dashboard-card" onclick="window.location.href='#apk-downloader'">
+                <div class="dashboard-card" onclick="window.location.href='/apk-downloader'">
                 <div class="card-icon">
                     <i class="bi bi-download"></i>
                 </div>
