--- a/templates/frida_gadget_injector.html
+++ b/templates/frida_gadget_injector.html
@@ -48,6 +48,14 @@
               </div>
             </div>
 
+            <div class="row g-3 mt-1">
+              <div class="col-md-6">
+                <label class="form-label">Library Name</label>
+                <input class="form-control" type="text" name="lib_name" value="frida-gadget" maxlength="64" />
+                <small class="text-muted">Will load as lib&lt;name&gt;.so and config lib&lt;name&gt;.config.so</small>
+              </div>
+            </div>
+
             
 
             <hr class="my-4" />
