--- a/templates/frida_gadget_manager.html
+++ b/templates/frida_gadget_manager.html
@@ -42,6 +42,7 @@
             <tr>
               <th>Version</th>
               <th>Arch</th>
+              <th>Name</th>
               <th>Size</th>
               <th>Path</th>
               <th>Actions</th>
